<resources>
    <string name="app_name">TripLogger</string>
    <string name="action_settings">Settings</string>
    <string name="trip_title_hint">Enter a title for the trip</string>
    <string name="trip_title_label">Title</string>
    <string name="trip_item_label">Item</string>
    <string name="trip_destination">Destination</string>
    <string name="trip_destination_hint">Enter your destination here</string>
    <string name="trip_duration">Duration</string>
    <string name="trip_duration_hint"> Duration of the trip</string>
    <string name="trip_comment">Comment Below</string>
    <string name="trip_comment_hint">Comment here</string>
    <string name="trip_prompt">Choose a trip category</string>
    <string-array name="trip_arrays">
        <item>Work</item>
        <item>Personal</item>
        <item>Commute</item>
    </string-array>



    <string name="log">Log</string>
    <string name="setting">Setting</string>
    <string name="title_activity_settings">Settings</string>

</resources>
