<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <include
        layout="@layout/view_camera_and_title"
        android:layout_width="228dp"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/trip_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"/>


    <EditText android:id="@+id/trip_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/trip_title_hint"/>

    <EditText
        android:id="@+id/trip_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/trip_destination_hint"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/TripType"
        android:prompt="@string/trip_prompt"/>

    <EditText
        android:id="@+id/trip_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/trip_duration_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:id="@+id/delete"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_gravity="center_horizontal"
        android:clickable="true"/>
    <EditText
        android:id="@+id/trip_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/trip_comment_hint"/>




</LinearLayout>